modif pour pharmacy

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tutorial"
   ],
   "author": "Mehdi",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/harabida/MeanApp/issues"
   },
