--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "test"
   },
-  "engines":{
-    "node" : "4.3.x",
-    "npm" : "2.14.x"
+  "engines": {
+    "node": "4.3.x",
+    "npm": "2.14.x"
   },
   "repository": {
     "type": "git",
@@ -28,10 +28,14 @@
   "homepage": "https://github.com/harabida/MeanApp#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "jade": "^1.11.0",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "stylus": "^0.54.2"
   }
 }
